Change tag cloud back to 1200 x 1200, but fix the height of the div to avoid jumpiness on page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,14 @@
     float: left;
     font-size: x-large;
 }
+
+.show-raw-json {
+    cursor: pointer;
+}
+
+#tag-cloud {
+    height: 1200px;
+    width: 1200px;
+    display:block;
+    overflow: hidden;
+}
